feat: Added unit/integration testcases for AppointmentBookingUsecase feat: Added gen_random_uuid() to "id" primary key for each table if "id" is not provided feat: Added make file for simple command usage feat: Added totalDuration calculation (Assume client don't give the total service duration) feat: Added logic to check desired start time should not before dealership's open time and desired start time + duration should not before dealership close time feat: Added mock seed data for testing purpose
fix: Fixed incompatible type between pgx.Interval(microsecond) and time.Duration(nanosecond) by changing the input duration to duration.Microseconds()
